infra/uds-bundles/uds-bundles/PER_BUNDLE/amaru/manifests/authorizationpolicy.yaml
# Copyright 2026 SZL Holdings — SPDX-License-Identifier: Apache-2.0
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-mesh-to-amaru
  namespace: amaru
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: amaru
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/istio-tenant-gateway/sa/tenant-ingressgateway"
              - "cluster.local/ns/a11oy/sa/default"
              - "cluster.local/ns/sentra/sa/default"
